--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -121,6 +121,7 @@
   align-items: center;
   border: 1px solid transparent;
   margin-left: 12px;
+  cursor: pointer;
 }
 }
 .contact-link__footer{
