--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -4,4 +4,7 @@
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  @media screen and (max-width: 480px){
+    width: 480px;
+  }
 }
