--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,85 +1,102 @@
 .page-header {
   border-bottom: solid 1px #ececec;
 }
-.main-nav {
-  display: flex;
-  align-items: center;
-  padding-bottom: 0;
-  &__logo
-    {
-   color:$AccentColor;
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 100%;}
-  &--accent{  color: #000000;
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 100%;
- }
+.menu-button{
+  display: inline-flex;
+  padding: 0;
+  margin: 0;
+  border: none;
+  background-color: transparent;
+  & .icon-close{
+    display: none;
   }
-  .navigation {
-  margin-left: 93px;
-  &-list{
-  display: flex;
-& .navigation-item:not(:last-child){
-  margin-right: 50px;  }
-}
-&-link {
-  color:$TitleTextColor;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 100%;
-  transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding-bottom: 32px;
-  padding-top: 32px;
-  &:focus, &:hover{
-    color:$AccentColor;
+  &.is-open .icon-close{
+display: block;
+  }
+  &.is-open .icon-menu{
+    display: none;
   }
 }
-}
-.accent{
-  color: $AccentColor;
-  position: relative;
-  &::after{
-    content: "";
-    display: inline-block;
-    height: 4px;
-    width: 100%;
-    background-color:$AccentColor;
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    border-radius: 2px;
-  }
-}
-.contact {
-  display: flex;
-  margin-left: auto;
-&-item:not(:last-child){
-     margin-right: 50px;
-}
-&-link{
-     color: #757575;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 100%;
-  transition-duration: 250ms;
-    padding-bottom: 32px;
-  padding-top: 32px;
-  display: flex;
-  align-items: center;
-  transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:focus, &:hover{
-    color:$AccentColor;
-}
-}
-&-icon{
-   fill: #757575;
-  margin-right: 10px;
-  .contact-link:hover &{
-    fill:$AccentColor;
-  }  
-}
-}
+
+// .main-nav {
+//   display: flex;
+//   align-items: center;
+//   padding-bottom: 0;
+//   &__logo
+//     {
+//    color:$AccentColor;
+//   font-family: Raleway, sans-serif;
+//   font-weight: 700;
+//   font-size: 26px;
+//   line-height: 100%;}
+//   &--accent{  color: #000000;
+//   font-family: Raleway, sans-serif;
+//   font-weight: 700;
+//   font-size: 26px;
+//   line-height: 100%;
+//  }
+//   }
+//   .navigation {
+//   margin-left: 93px;
+//   &-list{
+//   display: flex;
+// & .navigation-item:not(:last-child){
+//   margin-right: 50px;  }
+// }
+// &-link {
+//   color:$TitleTextColor;
+//   font-weight: 500;
+//   font-size: 14px;
+//   line-height: 100%;
+//   transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   padding-bottom: 32px;
+//   padding-top: 32px;
+//   &:focus, &:hover{
+//     color:$AccentColor;
+//   }
+// }
+// }
+// .accent{
+//   color: $AccentColor;
+//   position: relative;
+//   &::after{
+//     content: "";
+//     display: inline-block;
+//     height: 4px;
+//     width: 100%;
+//     background-color:$AccentColor;
+//     position: absolute;
+//     left: 0;
+//     bottom: -1px;
+//     border-radius: 2px;
+//   }
+// }
+// .contact {
+//   display: flex;
+//   margin-left: auto;
+// &-item:not(:last-child){
+//      margin-right: 50px;
+// }
+// &-link{
+//      color: #757575;
+//   font-weight: 500;
+//   font-size: 14px;
+//   line-height: 100%;
+//   transition-duration: 250ms;
+//     padding-bottom: 32px;
+//   padding-top: 32px;
+//   display: flex;
+//   align-items: center;
+//   transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   &:focus, &:hover{
+//     color:$AccentColor;
+// }
+// }
+// &-icon{
+//    fill: #757575;
+//   margin-right: 10px;
+//   .contact-link:hover &{
+//     fill:$AccentColor;
+//   }  
+// }
+// }
