--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   background-image:
-    linear-gradient(to right, #2f303a66), url(../images/Header-phone-img.jpg);
+    linear-gradient(to right, #2f303a66), url(../../images/Header-phone-img.jpg);
   background-size: contain;
   background-repeat: no-repeat;
   display: flex;
@@ -52,31 +52,31 @@
 }
 @media (min-resolution: 2dppx) {
   .hero {
-    background-image: url(../images/Header-phone-img@2x.jpg);
+    background-image: url(../../images/Header-phone-img@2x.jpg);
     background-size: contain;
   }
 }
 
 @media (min-width: 481px) {
   .hero {
-    background-image: url(../images/Header-tablet__img.jpg);
+    background-image: url(../../images/Header-tablet__img.jpg);
     background-size: contain;
   }
   @media (min-resolution: 2dppx) {
     .hero {
-      background-image: url(../images/Header-tablet__\ img@2x.jpg);
+      background-image: url(../../images/Header-tablet__\ img@2x.jpg);
       background-size: contain;
     }
   }
 }
 @media screen and (min-width: 769px) {
   .hero {
-    background-image: url(../images/background-image.jpg);
+    background-image: url(../../images/background-image.jpg);
     background-size: cover;
   }
   @media (min-resolution: 2dppx) {
     .hero {
-      background-image: url(../images/background-img@2x.jpg);
+      background-image: url(../../images/background-img@2x.jpg);
       background-size: contain;
     }
   }
